--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -22,7 +22,7 @@ p {
 }
 
 .gallery {
-  margin: 0;
+  margin: 0 0 40px 0;
   padding-left: 0;
   list-style-type: none;
   padding: 24px 120px;
@@ -146,11 +146,6 @@ img {
   text-align: center;
 }
 
-.preload {
-  margin-top: 80px;
-  text-align: center;
-}
-
 .is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -158,6 +153,7 @@ img {
 }
 
 .loader {
+  text-align: center;
   position: relative;
   width: 120px;
   height: 90px;
